<resources>
    <string name="app_name">BCare</string>

    // untuk logo
    <string name="b">B</string>
    <string name="care">Care</string>

    // content Description
    <string name="dLogo">This is logo of BCare</string>
    <string name="dLoginImage">Logo BCare for Login Page</string>

    // tombol
    <string name="bsignup">Signup</string>
    <string name="blogin">Login</string>
    <string name="bgoogleLogin">Sign in with Google</string>
    <string name="binfo">About App</string>
    <string name="blogout">Log Out</string>
    <string name="bupload">Upload</string>
    <string name="bscanface">Scan Face</string>

    // hint
    <string name="hEmail">Email</string>
    <string name="hPassword">Password</string>
    <string name="hUsername">Username</string>
    <string name="hFamily">Family Email</string>

    // text
    <string name="tspalsh">BabyBlues Detection App</string>
<!--    <string name="twelcome">The best time to start knowing your Mental Health is now!</string>-->
    <string name="twelcome">Waktu terbaik untuk mulai mengetahui Kesehatan Mental Anda adalah sekarang!</string>
    <string name="tor">OR</string>
    <string name="tloginPage">Welcome to BCare! 🤱🍼👶</string>
    <string name="tsignupPage">Complete your data</string>
    <string name="thello">Hai👋🏻, </string>
<!--    <string name="thomePage">We wish you have a good day 😊</string>-->
    <string name="thomePage">Semoga hari mu menyenangkan 😊</string>
    <string name="invalid">Please enter the correct data</string>
<!--    <string name="notesScan">Notes: </string>-->
    <string name="notesScan">Catatan: </string>
<!--    <string name="isiNotes">Please enter a face-on selfie photo. So,that the app can predict the expression correctly.</string>-->
    <string name="isiNotes">Silakan masukkan foto selfie wajah. Dengan demikian, aplikasi dapat memprediksi ekspresi dengan benar.</string>
<!--    <string name="rangeResult">Range of results : Safe, Medium, Acute </string>-->
    <string name="rangeResult">Kisaran hasil: Aman, Sedang, Akut </string>
    <string name="result">Hasil: </string>
    <string name="resultnya">Resultnya</string>
    <string name="suggestion">Saran: </string>
    <string name="suggestionnya">Suggestionnya</string>

    //about app
<!--    <string name="aaplikasi">Becare is a mobile application to detect a person in order to know and be able to prevent the occurrence of Baby Blues. It can prevent infant death and abuse. And the user\'s immediate family can use the app to get information related to the user\'s mental health.</string>-->
    <string name="aaplikasi">Becare adalah aplikasi mobile untuk mendeteksi seseorang agar dapat mengetahui dan dapat mencegah terjadinya Baby Blues. Aplikasi ini dapat mencegah kematian dan kekerasan pada bayi. Dan keluarga terdekat pengguna dapat menggunakan aplikasi ini untuk mendapatkan informasi terkait kesehatan mental pengguna.</string>
    <string name="atim">Capstone Team CH2-PS134</string>
    <string name="bangkit">Bangkit Academy 2023 Batch 2</string>
    <string name="aanggota">Nama Anggota Tim:</string>
    <string name="agil">M463BSY1446 –  Agil Yudha Tri Anggara - Universitas PGRI Madiun</string>
    <string name="dimas">M006BSY0071 – Mochamad Dimas Putra Hermawan – Universitas Brawijaya</string>
    <string name="azmi">M674BSY0865 – Nur Azmi Hidayat – Universitas Borneo Tarakan</string>
    <string name="rifqi">C006BSY4334 – Rifqi Alfiansyah Kamil – Universitas Brawijaya</string>
    <string name="david">C006BSY3443 – David Kurniawan – Universitas Brawijaya</string>
    <string name="mulia">A694BSX2079 – Mulia Sahpira – Universitas Multi Data Palembang</string>
    <string name="dwiky">A132BSY2461 - Muhammad Dwiky Alfira - Politeknik Negeri Padang</string>

    //label
    <string name="lHome">Home</string>
    <string name="lProfile">Profile</string>
    <string name="lQuestion">Question</string>
    <string name="lAbout">About App</string>
    <string name="lLogin">Login</string>
    <string name="lSignup">SignUp</string>
    <string name="lScan">Scan</string>

    //artikel
    <string name="aArtikel">Artikel</string>
    <string name="aJudulArtikel">Judul Artikelnya</string>
    <string name="aIsiArtikel">Isi Artikelnya</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="bcare_app_name">Bcare app name</string>
    <string name="bcare_welcome_image">Bcare welcome image</string>
    <string name="success">Success!</string>
    <string name="register_success">Signup Success, please login!</string>
    <string name="login">Login</string>
    <string name="about_app">About App</string>
    <string name="scan_face">Scan Face</string>
    <string name="permission_granted">Permission Granted</string>
    <string name="permission_denied">Permission Denied!</string>
    <string name="image_empty">Image Empty!</string>


</resources>