<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.about.AboutActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/ivLogoAbout"
            android:layout_marginTop="20dp"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/logo"
            android:contentDescription="@string/dLogo"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <ImageView
            android:id="@+id/ivBcareAbout"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_marginTop="3dp"
            android:src="@drawable/bcare"
            android:contentDescription="@string/dLogo"
            app:layout_constraintTop_toBottomOf="@+id/ivLogoAbout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/txtBcareApp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:text="@string/aaplikasi"
            android:textSize="13sp"
            android:fontFamily="@font/mediumpoppins"
            app:layout_constraintTop_toBottomOf="@+id/ivBcareAbout"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/txtTim"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:text="@string/atim"
            android:textSize="19sp"
            android:textAlignment="center"
            android:fontFamily="@font/boldpoppins"
            app:layout_constraintTop_toBottomOf="@+id/txtBcareApp"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/txtBangkit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:text="@string/bangkit"
            android:textSize="19sp"
            android:textAlignment="center"
            android:fontFamily="@font/boldpoppins"
            app:layout_constraintTop_toBottomOf="@+id/txtTim"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/txtAnggota"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:text="@string/aanggota"
            android:textSize="13sp"
            android:fontFamily="@font/boldpoppins"
            app:layout_constraintTop_toBottomOf="@+id/txtBangkit"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/txtAgil"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:text="@string/agil"
            android:textSize="13sp"
            android:fontFamily="@font/mediumpoppins"
            app:layout_constraintTop_toBottomOf="@+id/txtAnggota"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/txtDimas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:text="@string/dimas"
            android:textSize="13sp"
            android:fontFamily="@font/mediumpoppins"
            app:layout_constraintTop_toBottomOf="@+id/txtAgil"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/txtAzmi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:text="@string/azmi"
            android:textSize="13sp"
            android:fontFamily="@font/mediumpoppins"
            app:layout_constraintTop_toBottomOf="@+id/txtDimas"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/txtRifqi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:text="@string/rifqi"
            android:textSize="13sp"
            android:fontFamily="@font/mediumpoppins"
            app:layout_constraintTop_toBottomOf="@+id/txtAzmi"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/txtDavid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:text="@string/david"
            android:textSize="13sp"
            android:fontFamily="@font/mediumpoppins"
            app:layout_constraintTop_toBottomOf="@+id/txtRifqi"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/txtMulia"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:text="@string/mulia"
            android:textSize="13sp"
            android:fontFamily="@font/mediumpoppins"
            app:layout_constraintTop_toBottomOf="@+id/txtDavid"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/txtDwiky"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:layout_marginBottom="15dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:text="@string/dwiky"
            android:textSize="13sp"
            android:fontFamily="@font/mediumpoppins"
            app:layout_constraintTop_toBottomOf="@+id/txtMulia"
            app:layout_constraintStart_toStartOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>



</androidx.core.widget.NestedScrollView>