<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.welcome.WelcomeActivity">

    <ImageView
        android:id="@+id/ivWelcome"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_marginTop="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/lovemom" />

    <ImageView
        android:id="@+id/ivBcare"
        android:layout_width="126dp"
        android:layout_height="60dp"
        app:layout_constraintTop_toBottomOf="@id/ivWelcome"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/bcare" />

    <TextView
        android:id="@+id/tvWelcome"
        android:layout_width="305dp"
        android:layout_height="60dp"
        android:layout_marginTop="10dp"
        android:text="@string/twelcome"
        android:fontFamily="@font/lightpoppins"
        android:textSize="20sp"
        android:gravity="center"
        android:textColor="@color/grey2"
        app:layout_constraintTop_toBottomOf="@+id/ivBcare"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnSignupWelcome"
        android:layout_width="350dp"
        android:layout_height="53dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/blue2"
        android:background="@drawable/bg_corner"
        android:text="@string/bsignup"
        android:textColor="@color/white"
        android:textSize="22sp"
        android:fontFamily="@font/extraboldoppins"
        app:layout_constraintTop_toBottomOf="@+id/tvWelcome"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnLoginWelcome"
        android:layout_width="350dp"
        android:layout_height="53dp"
        android:layout_marginTop="9dp"
        android:backgroundTint="@color/white2"
        android:background="@drawable/bg_corner"
        android:text="@string/blogin"
        android:textColor="@color/blue2"
        android:textSize="22sp"
        android:fontFamily="@font/extraboldoppins"
        app:layout_constraintTop_toBottomOf="@+id/btnSignupWelcome"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvOrWelcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/tor"
        android:fontFamily="@font/semiboldpoppins"
        android:textSize="16sp"
        android:gravity="center"
        android:textColor="@color/grey2"
        app:layout_constraintTop_toBottomOf="@+id/btnLoginWelcome"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnGoogleWelcome"
        android:layout_width="350dp"
        android:layout_height="53dp"
        android:layout_marginTop="5dp"
        android:paddingStart="20dp"
        android:background="@drawable/bg_default"
        android:drawableStart="@drawable/google"
        android:text="@string/bgoogleLogin"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:fontFamily="@font/boldpoppins"
        app:layout_constraintTop_toBottomOf="@+id/tvOrWelcome"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <ProgressBar
        android:id="@+id/progressBarWelome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminateTint="@color/blue"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>