<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.scan.ScanActivity">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="32dp"
            android:paddingBottom="32dp">

            <TextView
                android:id="@+id/txtnotes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/notesScan"
                android:textSize="15sp"
                android:fontFamily="@font/boldpoppins"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvNotes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/isiNotes"
                android:textSize="12sp"
                android:fontFamily="@font/mediumpoppins"
                app:layout_constraintTop_toBottomOf="@id/txtnotes"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <ImageView
                android:id="@+id/ImgUpload"
                android:layout_width="270dp"
                android:layout_height="270dp"
                android:layout_marginTop="40dp"
                android:adjustViewBounds="true"
                android:scaleType="centerCrop"
                android:src="@drawable/lovemom"
                app:layout_constraintTop_toBottomOf="@id/tvNotes"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                tools:ignore="ContentDescription" />

            <Button
                android:id="@+id/btnCamera"
                android:layout_width="66dp"
                android:layout_height="68dp"
                android:layout_marginTop="12dp"
                android:background="@drawable/bg_default"
                android:drawableStart="@drawable/ic_camera"
                android:padding="19dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.672"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ImgUpload" />

            <Button
                android:id="@+id/btnGallery"
                android:layout_width="66dp"
                android:layout_height="68dp"
                android:layout_marginTop="12dp"
                android:background="@drawable/bg_default"
                android:drawableStart="@drawable/ic_gallery"
                android:padding="19dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.37"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ImgUpload" />

            <Button
                android:id="@+id/btnUpload"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="75dp"
                android:backgroundTint="@color/blue2"
                android:background="@drawable/bg_corner"
                android:text="@string/bupload"
                android:textColor="@color/white"
                android:textSize="22sp"
                android:fontFamily="@font/extraboldoppins"
                app:layout_constraintTop_toBottomOf="@id/btnCamera"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <ScrollView
        android:id="@+id/scrollViewResult"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="32dp"
            android:paddingBottom="32dp">

            <TextView
                android:id="@+id/txtrange"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/rangeResult"
                android:textSize="12sp"
                android:textColor="#A90C0C"
                android:fontFamily="@font/semiboldpoppins"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/ImgResult"
                android:layout_width="270dp"
                android:layout_height="270dp"
                android:layout_marginTop="40dp"
                android:adjustViewBounds="true"
                android:scaleType="centerCrop"
                android:src="@drawable/lovemom"
                app:layout_constraintTop_toBottomOf="@id/txtrange"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/txtResult"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/result"
                android:textSize="20sp"
                android:fontFamily="@font/boldpoppins"
                app:layout_constraintTop_toBottomOf="@id/ImgResult"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/tvResult"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/resultnya"
                android:textSize="33sp"
                android:fontFamily="@font/extraboldoppins"
                app:layout_constraintTop_toBottomOf="@id/txtResult"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/txtSuggestion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/suggestion"
                android:textSize="15sp"
                android:fontFamily="@font/boldpoppins"
                app:layout_constraintTop_toBottomOf="@id/tvResult"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/tvSuggestion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/suggestionnya"
                android:textSize="15sp"
                android:fontFamily="@font/mediumpoppins"
                app:layout_constraintTop_toBottomOf="@id/txtSuggestion"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>